# crazyswarm2

./: .gitignore  Dockerfile  Makefile  develop.py  notes.md  requirements.txt
crazyflie/: CMakeLists.txt
crazyflie/config/: crazyflies.yaml  motion_capture.yaml
crazyflie/launch/: launch.py
crazyflie/src/: crazyflie_server.cpp
crazyflie_mpc/: CMakeLists.txt  README.md  package.xml  setup.py
crazyflie_mpc/config/: mpc_config.yaml  trajectories.yaml
crazyflie_mpc/crazyflie_mpc/: follow_waypoint.py  geometric_control.py  gp_control.py  hybrid_control.py  models.py  mpc_control.py  waypoint_traj.py
crazyflie_mpc/launch/: launch.py  mpc_demo_launch.py  trajectory_launch.py
crazyflie_mpc/src/: \  hybrid_control.py  mpc_control.py
crazyflie_py/crazyflie_py/: __init__.py
